kubernetes/apps/mcp/ha-mcp/app/httproute.yaml
---
# yaml-language-server: $schema=https://crd.kantai.xyz/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ha-mcp
spec:
  hostnames:
    - ha-mcp.kantai.xyz
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: mcp-ha-mcp-proxy
          port: 8080
